# MILE

./: .gitignore  LICENSE  README.md  debug.ipynb  nohup.out  pyproject.toml  sample_distribution.ipynb  train.py  warmstart_chain_0.csv  warmstart_chain_1.csv  warmstart_distribution.ipynb
data/: australian_proc.data  glass_proc.data  heart_proc.data  ionosphere.data  preprocess_uci_class.py  sonar_proc.data  wine_red_proc.data  wine_white_proc.data
experiments/: plot_results.R  pool_results.py  symmetric_splitting.py
experiments/additional_tasks/: income_classif.yaml  income_classif_nuts.yaml  ionosphere_classif.yaml  ionosphere_classif_nuts.yaml  lenet.yaml  lenetti_fmnist.yaml  lenetti_mnist.yaml  sequential_mod.yaml  sequential_mod_pretrained.yaml  sequential_mod_pretrained_larger.yaml  sequential_mod_pretraining.yaml  sequential_mod_pretraining_larger.yaml
experiments/complexity_ablation/: bike_de.yaml  bike_mclmc.yaml  bike_nuts.yaml  complexity_search.yaml
experiments/dataset/: dataset.yaml  repl_uci_search.yaml
experiments/datasize_ablation/: datasize_search.yaml  protein_mclmc.yaml  protein_nuts.yaml
experiments/diagnostics/: diagnostics_search.yaml  mclmc.yaml  nuts.yaml
experiments/feasibility/: feas.yaml  feas_search.yaml
experiments/hyper_params_ablation/: bike_de.yaml  bike_mclmc.yaml  bike_nuts.yaml  search_desired_energy_var.yaml  search_ess.yaml  search_nuts_baseline.yaml  search_trust_in_estimate.yaml  search_warmstart_budget.yaml
experiments/illustrative_example_readme/: mclmc.yaml  nuts.yaml
experiments/replicate_uci/: airfoil_2_hidden_layers.yaml  airfoil_2_hidden_layers_Gaussian.yaml  airfoil_4_hidden_layers.yaml  airfoil_4_hidden_layers_100k_samples.yaml  airfoil_4_hidden_layers_Gaussian.yaml  airfoil_4_hidden_layers_partition.yaml  de.yaml  debug.yaml  energy_2_hidden_layers.yaml  energy_2_hidden_layers_64_neurons.yaml  energy_2_hidden_layers_Gaussian.yaml  energy_4_hidden_layers.yaml  energy_4_hidden_layers_64_neurons.yaml  energy_4_hidden_layers_Gaussian.yaml  mclmc.yaml  mclmc_energy.yaml  nuts.yaml  partition_MCLMC.yaml  partition_NUTS.yaml  repl_uci_search.yaml
experiments/tabluar_classif/: australian.yaml  covertype.yaml  glass.yaml  heart.yaml  repl_search.yaml  sonar.yaml  wine_red.yaml  wine_white.yaml
module_sandbox/: __init__.py  exceptions.py  types.py  utils.py
module_sandbox/config/: core.py  data.py  sampler.py  training.py  warmstart.py
module_sandbox/dataset/: __init__.py  base.py  image.py  tabular.py  text.py
module_sandbox/inference/: __init__.py  evaluation.py  inference.ipynb  metrics.py  reporting.py  utils.py
module_sandbox/models/: __init__.py
module_sandbox/training/: __init__.py  callbacks.py  priors.py  probabilistic.py  sampling.py  trainer.py  utils.py  warmup.py
module_sandbox/visualization/: __init__.py  posterior_predictive.py  samples.py
src/: exceptions.py  types.py
src/config/: __init__.py  base.py  core.py  data.py  sampler.py  training.py  warmstart.py
src/dataset/: __init__.py  base.py  image.py  tabular.py  text.py  (+1 more)
(+44 files in other folders)
