[tool.poetry]
name = "probabilisticml-sandbox"
version = "0.1.0"
description = "Sandbox Enviroment for the ProbML Toolset"
authors = []
readme = "README.md"
license = "LICENSE"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
pre-commit = "^3.6.2"
jax = "0.4.28"
blackjax = "1.2.2"
optax = "^0.2.1"
orbax = "^0.1.9"
numpyro = "^0.14.0"
flax = "^0.8.2"
arviz = "^0.17.1"
matplotlib = "^3.8.0"
jupyter = "1.0.0"
pandas = "2.1.1"
typer = "0.9.0"
seaborn = "^0.13.0"
scikit-learn = "1.3.2"
clu = "0.0.9"
plotly = "^2.0.0"
streamlit = "^1.31.1"
nbconvert = "^7.16.4"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
jax = {version="0.4.28", extras=["cuda12"]}

[tool.poetry.group.proba]
optional = true
[tool.poetry.group.proba.dependencies]
probabilisticml = {git = "https://github.com/lisa-wm/probabilisticml.git"}

[tool.poetry.group.vision]
optional = true
[tool.poetry.group.vision.dependencies]
torch = [
    {version = "^2.2.1", platform = "linux", source = "pytorch-cpu"},
    {version = "^2.2.1", platform = "!=linux", source = "PyPI"}
]
torchvision = [
    {version = "^0.17.1", platform = "linux", source = "pytorch-cpu"},
    {version = "^0.17.1", platform = "!=linux", source = "PyPI"}
]

[tool.poetry.group.nlp]
optional = true
[tool.poetry.group.nlp.dependencies]
tokenizers = "^0.19.1"
datasets = "^2.19.0"
tiktoken = "^0.6.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
